--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,15 @@
     margin-left: 358px;
     margin-top: 10px;
   }
+
+
+  .img:hover{
+    cursor: pointer;
+    width: 250px;
+    height: auto;
+    transition: 50ms;
+
+  }
   
   .cabecalho {
     display: flex;
@@ -79,6 +88,11 @@
       margin-left: -4px;
   
     }
+
+    .assine{
+      cursor: pointer;
+      box-shadow: 0px 10px 5px 0px rgba(0, 0, 0, 0.096);
+    }
   
     .assineLink{
       text-decoration: none;
@@ -99,6 +113,17 @@
       outline: none;
       margin-top: 37px;
     }
+
+    .email:hover {
+      width: 400px;
+      height: 75px;
+      margin-left: 18%;
+      box-shadow: 0px 7px 5px 0px rgba(0, 0, 0, 0.226);
+      border: none;
+      outline: none;
+      margin-top: 37px;
+
+    }
     
     .email::placeholder {
       color: #202020;
@@ -113,7 +138,8 @@
       justify-content: center;
       align-items: center;
     }
-    
+
+   
   
   .itensMenu {
     display: flex;
@@ -127,6 +153,13 @@
     font-size: 16px;
     font-weight: 500;
     color: black;
+  }
+
+  .ItensLink:hover{
+
+    font-size: 20px;
+    color: black;
+
   }
   
   
@@ -266,6 +299,20 @@
     box-shadow: 0px 7px 5px 0px rgba(0, 0, 0, 0.158);
     margin: 0.5%;
     display: flex;
+
+}
+
+
+.card:hover{
+    cursor: pointer;
+    width: 380px;
+    height: 201px;
+    background-color: white;
+    box-shadow: 0px 0px 20px rgb(0, 0, 0);
+
+    border: solid transparent 20px;
+   ;
+    transition: 50ms;
 
 }
 .card figure{
