--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,8 @@
     .InputAndButton{
       display: flex;
     }
-  
+    
+
   
     .assine{
       height: 79px;
@@ -304,14 +305,14 @@
 
 
 .card:hover{
-    cursor: pointer;
-    width: 380px;
-    height: 201px;
-    background-color: white;
-    box-shadow: 0px 0px 20px rgb(0, 0, 0);
+  cursor: pointer;
+  width: 379px;
+  height: 200px;
+  background-color: white;
+  box-shadow: 0px 7px 5px 5px rgba(0, 0, 0, 0.244);
+  margin: 0.5%;
+  display: flex;
 
-    border: solid transparent 20px;
-   ;
     transition: 50ms;
 
 }
